# infekt

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CNAME  Cargo.toml  ChangeLog.md  FAQ.md  README.md  changelog.html  dist-workspace.toml  faq.html  generate-secondary-files.js  index.html  params.json
crates/infekt/: Cargo.toml
crates/infekt-core/: Cargo.toml
crates/infekt-core/src/: codepage_437.rs  lib.rs  nfo_data.rs  nfo_html_exporter.rs  nfo_to_html.rs  nfo_to_html_canvas.rs
crates/infekt-core/templates/: nfo_canvas.html  nfo_html.html
crates/infekt/src/: app.rs  gui.rs  lib.rs  main.rs
crates/infekt/wix/: main.wxs
infekt-v2/: Cargo.toml  build.rs  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
infekt-v2/frontend/: index.html  tsconfig.json  vite.config.ts
infekt-v2/frontend/src/: App.tsx  main.tsx  styles.css
infekt-v2/infekt-core-cpp/include/: stdafx.h
infekt-v2/src/: App.tsx  app.rs  core.rs  gui.rs  main.rs  main.tsx  settings.rs
infekt-v2/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
infekt-v2/src-tauri/capabilities/: main.json
infekt-v2/src-tauri/src/: commands.rs  infekt_core.rs  main.rs  nfo_data.rs  nfo_renderer_grid.rs  nfo_to_html.rs
infekt-v2/src/api/: types.ts
infekt-v2/src/app/: file_operations.rs  theme.rs  utils.rs  view.rs
infekt-v2/src/components/: DialogMask.tsx  SiderMenu.tsx
infekt-v2/src/context/: DialogMaskContext.tsx  SiderMenuContext.tsx
infekt-v2/src/core/: cpp.rs  nfo_data.rs  nfo_renderer_grid.rs  nfo_to_html.rs
infekt-v2/src/gui/: about_screen.rs  main_view.rs  preferences.rs  sidebar.rs  utils.rs  widget.rs
infekt-v3/: Cargo.toml  build.rs  infekt-v3.code-workspace
infekt-v3/infekt-core-cpp/include/: stdafx.h
infekt-v3/src/: font.rs  infekt_core.rs  main.rs  nfo_data.rs  nfo_renderer_grid.rs  nfo_renderer_modern.rs  nfo_to_html.rs
infekt-v3/ui/: app-window.slint  side-bar.slint
infekt-v3/ui/about-page/: about-page.slint
infekt-v3/ui/main-view/: main-view.slint
infekt-v3/ui/preferences/: preferences-page.slint
infekt-v4/: Cargo.toml  build.rs
infekt-v4/src/: app.rs  core.rs  gui.rs  main.rs
infekt-v4/src/app/: file_operations.rs  utils.rs  view.rs
infekt-v4/src/core/: cpp.rs  nfo_data.rs  nfo_renderer_grid.rs  nfo_to_html.rs
infekt-v4/src/gui/: about_screen.rs  main_view.rs  nfo_view_rendered.rs  sidebar.rs
legacy/cpp/src/: CMakeLists.txt
src/: CMakeLists.txt
src/console/: CMakeLists.txt  infekt.cpp  stdafx.h
src/cuda-blur/: boxblur_kernel.cu  main.cpp
src/gtk/: infektwindowdata.glade  main_window.cpp  main_window.h  nfo_view_ctrl.cpp  nfo_view_ctrl.h  stdafx.h
src/lib/: ansi_art.cpp  ansi_art.h  basic_xml.cpp  basic_xml.h  cairo_box_blur.cpp  cairo_box_blur.h  cairo_image_surface_blur.inc  gutf8.c  html_entities.inc  infekt.h  kopf_lischinski.cpp  nfo_colormap.cpp  nfo_colormap.h  nfo_data.cpp  nfo_data.h  nfo_data_cp437.inc  nfo_hyperlink.cpp  nfo_hyperlink.h  nfo_renderer.cpp  nfo_renderer.h  nfo_renderer_export.h  nfo_to_html.cpp  nfo_to_html_canvas.cpp  nfo_to_pdf.cpp  nfo_to_png.cpp  settings_backend.cpp  settings_backend.h  targetver.h  util.cpp  util.h  util_regex.h
src/lib-posix/: iconv_string.c  infekt-posix.cpp  infekt-posix.h
src/lib-win32/: file_dialogs_win6x.cpp  getopt.cpp  safe_release.h  targetver.h  util_win32.cpp  util_win32.h  util_win32_gui.cpp  util_win32_gui.h  win_file_watcher.cpp  win_file_watcher.h  win_http_client.cpp  win_http_client.h
src/plugin/: infekt-plugin.h
src/win32/: about_dlg.cpp  about_dlg.h  app.cpp  app.h  default_app.cpp  default_app.h  default_app_5x.cpp  default_app_6x.cpp  default_app_win7.cpp  default_app_win8.cpp  default_app_winxp.cpp  drop_target_helper.cpp  file_dialogs_win6x.cpp  infekt_global.h  infobar.cpp  infobar.h  main_frame.cpp  main_frame.h  main_settings.cpp  main_settings.h  main_view.cpp  main_view.h  main_window.cpp  main_window.h  nfo_view_ctrl.cpp  nfo_view_ctrl.h  plugin_api.cpp  plugin_manager.cpp  plugin_manager.h  plugin_methods.cpp  plugin_triggers.cpp  portableapps-launcher.cpp  settings_dlg.cpp  settings_dlg.h  stdafx.h
src/win32-amp/: gaussian_blur.cpp  main.cpp
src/win32-default-app/: default_app.cpp  default_app_5x.cpp  default_app_6x.cpp  main.cpp
src/win32-plugin-imdb/: content_scraper.cpp  content_scraper.h  imdb-plugin.h  imdb.cpp  main.cpp  stdafx.h
src/win32-plugin-rescene/: main.cpp  rescene-plugin.h  rescene.cpp  srr++.cpp  srr++.h  stdafx.h
src/win32-shell-dll/: dll.cpp  preview_handler.cpp  shell-util.cpp  stdafx.h  thumbnail_provider.cpp
src/win32-support/: getopt.h  targetver.h  theme_api.cpp  theme_api.h  win_file_watcher.cpp  win_file_watcher.h  win_http_client.cpp  win_http_client.h
src/win32-updater/: background.cpp  download.cpp  helpers.cpp  main.cpp  updater.h
trunk/src/: CMakeLists.txt
trunk/src/console/: CMakeLists.txt  infekt.cpp  stdafx.h
trunk/src/cuda-blur/: boxblur_kernel.cu  main.cpp  recursiveGaussian.cu  recursiveGaussian_kernel.cu
trunk/src/gtk/: CMakeLists.txt  infektwindowdata.glade  main.cpp  main_window.cpp  main_window.h  nfo_view_ctrl.cpp  nfo_view_ctrl.h
trunk/src/lib/: ansi_art.cpp  ansi_art.h  basic_xml.cpp  basic_xml.h  cairo_box_blur.cpp  cairo_box_blur.h  cairo_image_surface_blur.inc  forgiving_utf8.c  gutf8.c  infekt.h  kopf_lischinski.cpp  kopf_lischinski.h  nfo_colormap.cpp  nfo_colormap.h  nfo_data.cpp  nfo_data.h  nfo_data_cp437.inc  nfo_data_cp437_strict.inc  nfo_hyperlink.cpp  nfo_hyperlink.h  nfo_renderer.cpp  nfo_renderer.h  nfo_renderer_export.h  nfo_to_html.cpp  nfo_to_pdf.cpp  nfo_to_png.cpp  settings_backend.cpp  util.cpp  util.h  util_regex.h
trunk/src/lib-posix/: infekt-posix.cpp  infekt-posix.h
trunk/src/lib-win32/: safe_release.h  util_win32.cpp  util_win32.h  util_win32_gui.cpp  util_win32_gui.h  win_file_watcher.cpp
trunk/src/plugin/: infekt-plugin.h
trunk/src/win32-amp/: gaussian_blur.cpp
trunk/src/win32-default-app/: default_app.h  main.cpp
trunk/src/win32-plugin-imdb/: content_scraper.cpp  content_scraper.h  imdb-plugin.h  imdb.cpp  main.cpp  stdafx.h
(+698 files in other folders)
