[package]
name = "infekt-nfo-viewer"
version = "2.0.0-alpha1"
edition = "2024"
description = "The ultimate best NFO viewer, ever!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cxx-build = "1.0"
cc = "1.0"

[dependencies]
cxx = { version = "1.0", features = ["c++20"] }
htmlentity = "1.3"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
serde_repr = "0.1"
tiny-skia = "0.11.4"
image = "0.25.5"
iced = { version = "0.14.0-dev", features = [
    "image",
    "svg",
    "advanced",
    "canvas",
    "web-colors",
    "crisp",
] }
rfd = "0.15.2"
ico = "0.3.0"
rustc-hash = "2.1.0"
palette = "0.7.6"
colornames = "0.0.6"
fontdb = "0.23.0"
open = { version = "5.3.2", features = ["shellexecute-on-windows"] }
