[package]
name = "infekt-nfo-viewer"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
slint-build = "1.8.0"
cxx-build = "1.0"
cc = "1.0"

[dependencies]
slint = "1.8.0"
cxx = { version = "1.0", features = ["c++20"] }
htmlentity = "1.3.1"
