[package]
name = "infekt-nfo-viewer"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
slint-build = "1.8.0"
cxx-build = "1.0"
cc = "1.0"

[dependencies]
slint = "1.8.0"
cxx = { version = "1.0", features = ["c++20"] }
htmlentity = "1.3.1"
native-dialog = "0.7.0"
serde = {version= "1.0", features=["serde_derive"]}
serde_json = "1.0"
serde_repr = "0.1"
