[package]
name = "infekt-nfo-viewer"
version = "2.0.0-alpha0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cxx-build = "1.0"
cc = "1.0"

[dependencies]
cxx = { version = "1.0", features = ["c++20"] }
htmlentity = "1.3.1"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
serde_repr = "0.1"
tiny-skia = "0.11.4"
image = "0.25.5"
iced = { version = "0.13.1", features = ["image", "svg", "system", "advanced", "canvas", "web-colors"] }
iced_aw = { version = "0.11", features = ["tabs", "tab_bar"] }
rfd = "0.15.1"
ico = "0.3.0"
rustc-hash = "2.1.0"
