[package]
name = "infekt-core"
version = "2.0.0-alpha1"
edition = "2024"
description = "Core NFO parsing and rendering logic for iNFekt."

[dependencies]
askama = { version = "0.14", features = ["serde_json"] }
hex_color = "3.0"
htmlentity = "1.3"
regex = "1.11"
rustc-hash = "2.1.0"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
serde_repr = "0.1"
