[package]
name = "infekt"
version = "2.0.0-alpha1"
edition = "2024"
description = "The ultimate best NFO viewer, ever!"

[dependencies]
infekt-core = { path = "../infekt-core" }
iced = { version = "0.14.0", features = [
    "image",
    "svg",
    "advanced",
    "canvas",
    "web-colors",
    "crisp",
    "sysinfo",
] }
rfd = "0.15.4"
ico = "0.3.0"
rustc-hash = "2.1.0"
palette = "0.7.6"
colornames = "0.0.6"
fontdb = "0.23.0"
open = { version = "5.3.2", features = ["shellexecute-on-windows"] }
