[package]
name = "infekt"
version = "2.0.0-alpha1"
edition = "2024"
description = "The ultimate best NFO viewer, ever!"
authors = ["syndicode"]
homepage = "https://infekt.ws/"
repository = "https://github.com/syndicodefront/infekt"

[package.metadata.dist]
display-name = "iNFekt"
installers = ["msi"]

[package.metadata.wix]
name = "iNFekt"
upgrade-guid = "CB7688D1-2B89-4636-B32C-A43932B43139"
path-guid = "3377E7BA-8C88-44F2-A199-A5AE5BCC99E5"
product-icon = "../../assets/icons/iNFekt.ico"
license = false
eula = false

[dependencies]
infekt-core = { path = "../infekt-core" }
iced = { version = "0.14.0", features = [
    "image",
    "svg",
    "advanced",
    "canvas",
    "web-colors",
    "crisp",
    "sysinfo",
] }
rfd = "0.15.4"
ico = "0.3.0"
rustc-hash = "2.1.0"
palette = "0.7.6"
colornames = "0.0.6"
fontdb = "0.23.0"
open = { version = "5.3.2", features = ["shellexecute-on-windows"] }
