[package]
name = "infekt"
version = "2.0.0"
description = "iNFekt NFO Viewer"
authors = ["flakes"]
license = "GPL-2.0-or-later"
repository = "https://github.com/syndicodefront/infekt"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }
cxx-build = "1.0"
cc = "1.0"

[dependencies]
tauri = { version = "2.0.0-alpha", features = [] }
tauri-plugin-dialog = "2.0.0-alpha"
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
cxx = { version = "1.0", features = ["c++20"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
